--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -5,5 +5,5 @@ header {
     background: white url(../images/logo.png);
     background-position: 20px center;
     background-repeat: no-repeat;
-
+    flex-shrink: 0;
 }
